Fix IE11 distorting banner logo

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -1128,9 +1128,12 @@ img {
   }
 
   .banner3-logo{
+    display: block !important;
     padding: 0;
-    width: 75%;
-    height: 75%
+    width: auto;
+    height: auto;
+    max-width: 75%;
+    max-height: 75%
     // margin-left: 10%;
   }
 
